--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Venketesh's Site</title>
   </head>
-  <body>
+  <body style='background-color:#EAF6F6;'>
     <!-- image -->
     <img src="venk.jpg" alt="venk's Profile pic" width="100" height="100">
     <h1>Venketesh P Mall</h1>
