--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <h3>College Details</h3>
     <hr>
     <ul>
+      <center>
       <li><a href='https://www.bietdvg.edu/'>BIET</a> -Bachelor of engineering in Information Science<br>
       Bapuji Institute of Engineering and Technology, Davangere 
       Karnataka 2017 – 2021<br> 7.79 CGPA</li>
@@ -28,6 +29,7 @@
           Uttar Pradesh Board-2016<br> 87.4%</li>
       <li>10th Board<br>
           Uttar Pradesh Board-2016<br> 87.6%</li>
+      </center>
     </ul>
 
     <h3>Work Experience</h3>
