--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <h3>College Details</h3>
     <hr>
     <ul>
-      <center>
+      
       <li><a href='https://www.bietdvg.edu/'>BIET</a> -Bachelor of engineering in Information Science<br>
       Bapuji Institute of Engineering and Technology, Davangere 
-      Karnataka 2017 – 2021<br> 7.79 CGPA</li>
+        Karnataka 2017 – 2021<br> 7.79 CGPA</li>
       <li>12th Board<br>
-          Uttar Pradesh Board-2016<br> 87.4%</li>
+         <b> Uttar Pradesh Board-2016<br> 87.4%</li><b>
       <li>10th Board<br>
           Uttar Pradesh Board-2016<br> 87.6%</li>
       </center>
