--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Venketesh's Site</title>
+    <style>
+    body{
+      background-color:#eaf6f6;
+     }
+    hr{
+      background-color:white;
+      border-style:none;
+    }
+   </style>
   </head>
-  <body style='background-color:#EAF6F6;'>
+  <body>
     <!-- image -->
     <center>
     <img src="venk.jpg" alt="venk's Profile pic" width="100" height="100">
